@@ -21,6 +21,15 @@ from typing import Any, Dict, Optional
 from astrapy.api_commander import APICommander
 
 
+IS_ASTRA_DB: bool
+if "LOCAL_DATA_API_ENDPOINT" in os.environ:
+    IS_ASTRA_DB = False
+elif "ASTRA_DB_API_ENDPOINT" in os.environ:
+    IS_ASTRA_DB = True
+else:
+    raise ValueError("No credentials.")
+
+
 def desc_param(param_data: Dict[str, Any]) -> str:
     if param_data["type"].lower() == "string":
         return "str"
@@ -43,18 +52,36 @@ if __name__ == "__main__":
     if "l" in sys.argv[1:]:
         response = json.load(open("_providers.json"))
     else:
-        ASTRA_DB_APPLICATION_TOKEN = os.environ["ASTRA_DB_APPLICATION_TOKEN"]
-        ASTRA_DB_API_ENDPOINT = os.environ["ASTRA_DB_API_ENDPOINT"]
-        api_endpoint = ASTRA_DB_API_ENDPOINT
-        path = "api/json/v1"
-        headers: Dict[str, Optional[str]] = {"Token": ASTRA_DB_APPLICATION_TOKEN}
-        cmd = APICommander(
-            api_endpoint=api_endpoint,
-            path=path,
-            headers=headers,
-        )
-        response = cmd.request(payload={"findEmbeddingProviders": {}})
-        json.dump(response, open("_providers.json", "w"), indent=2, sort_keys=True)
+        if IS_ASTRA_DB:
+            ASTRA_DB_APPLICATION_TOKEN = os.environ["ASTRA_DB_APPLICATION_TOKEN"]
+            ASTRA_DB_API_ENDPOINT = os.environ["ASTRA_DB_API_ENDPOINT"]
+            api_endpoint = ASTRA_DB_API_ENDPOINT
+            path = "api/json/v1"
+            headers_a: Dict[str, Optional[str]] = {"Token": ASTRA_DB_APPLICATION_TOKEN}
+            cmd = APICommander(
+                api_endpoint=api_endpoint,
+                path=path,
+                headers=headers_a,
+            )
+            response = cmd.request(payload={"findEmbeddingProviders": {}})
+            json.dump(response, open("_providers.json", "w"), indent=2, sort_keys=True)
+        else:
+            LOCAL_DATA_API_APPLICATION_TOKEN = os.environ[
+                "LOCAL_DATA_API_APPLICATION_TOKEN"
+            ]
+            LOCAL_DATA_API_ENDPOINT = os.environ["LOCAL_DATA_API_ENDPOINT"]
+            api_endpoint = LOCAL_DATA_API_ENDPOINT
+            path = "v1"
+            headers_l: Dict[str, Optional[str]] = {
+                "Token": LOCAL_DATA_API_APPLICATION_TOKEN
+            }
+            cmd = APICommander(
+                api_endpoint=api_endpoint,
+                path=path,
+                headers=headers_l,
+            )
+            response = cmd.request(payload={"findEmbeddingProviders": {}})
+            json.dump(response, open("_providers.json", "w"), indent=2, sort_keys=True)
 
     provider_map = response["status"]["embeddingProviders"]
     for provider, provider_data in sorted(provider_map.items()):
